# FindManager

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  constants.py  models.py  permissions.py  serializers.py  services.py  signals.py  test_accounts.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_date_joined_alter_user_groups_and_more.py
backend/apps/common/: exceptions.py  logging.py  middleware.py  models.py  pagination.py  readiness.py  request_context.py  serializers.py  urls.py  views.py
backend/apps/common/migrations/: 0001_initial.py  0002_alter_auditevent_event_type.py  0003_alter_auditevent_event_type.py  0004_alter_auditevent_event_type.py  0005_alter_auditevent_event_type.py  0006_alter_auditevent_event_type.py  0007_alter_auditevent_event_type.py  0008_alter_auditevent_event_type.py  0009_alter_auditevent_event_type.py  0010_alter_auditevent_event_type.py  0011_alter_auditevent_event_type.py  0012_alter_auditevent_event_type.py  0013_alter_auditevent_event_type.py
backend/apps/common/tests/: test_production_readiness.py
backend/apps/operations/: __init__.py  models.py  serializers.py  services.py  test_operations.py  urls.py  views.py
backend/apps/shifts/: admin.py  labor_budget_services.py  models.py  revenue_services.py  revenue_views.py  serializers.py  services.py  timeline_services.py  urls.py  views.py
backend/config/: settings.py  test_settings.py  urls.py
docs/: architecture.md
(+114 files in other folders)
